--- a/style.css
+++ b/style.css
@@ -140,10 +140,10 @@ option:disabled{color: #f5f5f5 !important;}
 /* Buttons
 /* -------------------------------------------------- */
 
-#submit,.button{display:inline-block;padding:1px 12px 0;color:#006fa6;text-align:center;text-transform:uppercase;white-space:nowrap;font-size:12px;border-radius:2px;border:1px solid #008ACF;line-height: 28px;cursor:pointer;-webkit-transition-timing-function:ease;-webkit-transition-duration:.1s;-webkit-transition-property:background;}
+#submit,.button{display:inline-block;padding:1px 12px 0;color:#fff;text-align:center;text-transform:uppercase;white-space:nowrap;font-size:12px;background-color:#006fa6;border-radius:2px;border:1px solid #008ACF;line-height: 28px;cursor:pointer;-webkit-transition-timing-function:ease;-webkit-transition-duration:.1s;-webkit-transition-property:background;}
 .compare {background: #fff;}
 .button span{color:#fff;line-height:30px;}
-.button:hover{color: #FFF !important;}
+.button:hover{color: #006fa6 !important;}
 .button.active{-webkit-transition-timing-function:ease;-webkit-transition-duration:.2s;-webkit-transition-property:background-color, border-color;}
 .button.active:hover{background-color:#ccc !important;}
 .button.big{padding:10px 28px;}
