Update checkout page

--- a/css/dark.css
+++ b/css/dark.css
@@ -23,7 +23,7 @@ body{
 .header-top-variant4, 
 .header-top-variant4 .container,
 .header-top-variant5 .container{
-	background: #fc5a5a;
+	background: #008ACF;
 }
 
 .header-top-variant5 .header-variant2 #searchform .field{
@@ -62,7 +62,7 @@ input[type="hidden"] {
 }
 
 input:focus{
-	border: 1px solid #fc5a5a !important;
+	border: 1px solid #008ACF !important;
 }
 
 code, 
@@ -74,11 +74,11 @@ pre{
 
 blockquote{
 	background-color: #333;
-	border-bottom:1px solid #fc5a5a;
+	border-bottom:1px solid #008ACF;
 }
 
 mark{
-	color: #fc5a5a;
+	color: #008ACF;
 }
 
 label{
@@ -103,15 +103,15 @@ textarea{
 .modal{
 	background-color: #333;
 	border:none;
-	border-top:1px solid #fc5a5a;
+	border-top:1px solid #008ACF;
 }
 
 #cart-quantity .input-text:focus, #product-quantity .input-text:focus{
-	border:1px solid #fc5a5a !important;
+	border:1px solid #008ACF !important;
 }
 
 del{
-	color: #fc5a5a;
+	color: #008ACF;
 }
 
 .thumbnail{
@@ -193,7 +193,7 @@ del{
 }
 
 .default-menu > ul > li > ul li:hover > a{
-	color: #fc5a5a;
+	color: #008ACF;
 }
 
 .default-menu > ul > li > ul li:last-child{
@@ -239,7 +239,7 @@ del{
 }
 
 #contact_button .button:hover{
-	background: #fc5a5a;
+	background: #008ACF;
 }
 
 .form-submit #submit{
@@ -347,7 +347,7 @@ del{
 }
 
 #top-cart .cart-popup a.emptycart:hover{
-	background-color: #fc5a5a;
+	background-color: #008ACF;
 }
 
 #top-cart .cart-popup .recently-added{
@@ -372,7 +372,7 @@ del{
 }
 
 #top-cart a > span .amount{
-	color: #fc5a5a;
+	color: #008ACF;
 }
 
 .header-links > li > a{
@@ -492,7 +492,7 @@ del{
 
 .widget_layered_nav ul li a:hover, 
 .widget_layered_nav ul li span:hover{
-	color: #fc5a5a ;
+	color: #008ACF ;
 }
 
 .widget_layered_nav ul small.count{
@@ -501,7 +501,7 @@ del{
 }
 
 .widget_layered_nav ul li.chosen a{
-	background: #fc5a5a url(images/check.png) no-repeat 12px center ;
+	background: #008ACF url(images/check.png) no-repeat 12px center ;
 }
 
 .widget_price_filter .price_slider_wrapper .button{
@@ -545,7 +545,7 @@ del{
 
 .grid_pagination span.current, 
 .grid_bottom_pagination span.current{
-	background: #fc5a5a;
+	background: #008ACF;
 	color: #eee;
 }
 
@@ -621,7 +621,7 @@ table.shop_attributes th{
 div.pp_woocommerce .pp_content_container,
 .etheme-popup-content{
 	background-color: #222 !important;
-	border-top:1px solid #fc5a5a;
+	border-top:1px solid #008ACF;
 	border-left:1px solid #111 !important;
 	border-right:1px solid #111 !important;
 	border-bottom:1px solid #111 !important;
@@ -641,7 +641,7 @@ div.pp_woocommerce #respond #commentform #submit{
 }
 
 div.pp_woocommerce #respond #commentform #submit:hover{
-	background: #fc5a5a;
+	background: #008ACF;
 }
 
 .custom-tabs1{
@@ -730,7 +730,7 @@ table th{
 }
 
 .cart-collaterals .shipping_calculator .button:hover{
-	background: #fc5a5a;
+	background: #008ACF;
 }
 
 .cart-collaterals .shipping_calculator a,
@@ -763,7 +763,7 @@ table th{
 }
 
 .post-title:hover{
-	color: #fc5a5a !important;
+	color: #008ACF !important;
 }
 
 .post-default .post-images{
@@ -854,7 +854,7 @@ table th{
 .typography-block > .nav-tabs li:hover,
 .typography-block > .nav-tabs li.active:hover{
 	background: #444 !important;
-	border-left-color:#fc5a5a;
+	border-left-color:#008ACF;
 	border-left-width:1px !important;
 	border-left-style:solid !important;
 }
@@ -874,7 +874,7 @@ table th{
 }
 
 .typography-block > .nav-tabs li:hover a{
-	color: #fc5a5a;
+	color: #008ACF;
 }
 
 .typography-block > .nav-tabs > li:last-child{
@@ -897,7 +897,7 @@ table th{
 
 .member-details{
 	background: #333;
-	border-bottom:2px solid #fc5a5a;
+	border-bottom:2px solid #008ACF;
 }
 
 .member-details i{
@@ -907,7 +907,7 @@ table th{
 .p-table, .p-table-2, .p-table-3{
 	background: #333;
 	border:1px solid #111;
-	border-bottom:2px solid #fc5a5a;
+	border-bottom:2px solid #008ACF;
 	color: #eee;
 }
 
@@ -923,7 +923,7 @@ table th{
 
 .p-table li:hover, .p-table-2 li:hover{
 	background: #333 !important;
-	color: #fc5a5a;
+	color: #008ACF;
 }
 
 .p-table li i{
@@ -974,7 +974,7 @@ form.login .login-head, form.register .register-head{
 }
 
 .form-row .button:hover{
-	background: #fc5a5a ;
+	background: #008ACF ;
 }
 
 form.login .login-head i, form.register .register-head i{
@@ -998,7 +998,7 @@ form.login .login-head i, form.register .register-head i{
 
 .et-mobile-menu li > a:hover{
 	background: #111;
-	color: #fc5a5a;}
+	color: #008ACF;}
 
 .et-mobile-menu li .open-child{
 	background-color: #444;
@@ -1006,7 +1006,7 @@ form.login .login-head i, form.register .register-head i{
 }
 
 .et-mobile-menu li .open-child:hover{
-	background-color: #fc5a5a;
+	background-color: #008ACF;
 }
 
 #back-to-top.btn-style-standart a{
@@ -1019,7 +1019,7 @@ form.login .login-head i, form.register .register-head i{
 }
 
 .widget-container a:hover{
-	color: #fc5a5a ;
+	color: #008ACF ;
 }
 
 .portfolio-item .portfolio-mask{
@@ -1100,7 +1100,7 @@ div.light_rounded .pp_content{
 
 .tabs.checkout-accordion .tab-title.opened:hover span,
 .tabs.checkout-accordion .tab-title:hover span{
-	color:#fc5a5a;
+	color:#008ACF;
 }
 
 .chzn-container .chzn-results .active-result{
@@ -1123,7 +1123,7 @@ div.light_rounded .pp_content{
 	background-color: #333 !important;
 }
 #payment #place_order:hover{
-	background-color: #fc5a5a !important;
+	background-color: #008ACF !important;
 }
 
 .left-titles a:last-child{
