--- a/custom.css
+++ b/custom.css
@@ -208,10 +208,7 @@ p.woocommerce-result-count {
 		line-height: 55px;
 }
 .menu.cat-nav-menu ul li a {
-		padding: 0 10px;
-}
-.menu.cat-nav-menu ul li a:hover {
-		padding: 0 10px;
+		padding: 0 6px !important;
 }
 .home-product-grid .rows-count3.shortcode-products {
 		margin-top: 20px;
@@ -232,7 +229,7 @@ p.woocommerce-result-count {
 .grid_pagination_block .product-grid:hover {
 		border-color: #f0f0ed;
 		cursor: pointer;
-		box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+		box-shadow: 0 1px 10px rgba(0, 0, 0, 0.7);
 		transition: all 0.1s linear;
 }
 .home-product-grid .rows-count3.shortcode-products .product-grid:hover img,
@@ -252,7 +249,7 @@ p.woocommerce-result-count {
 .home-product-grid .product-grid.span3 {
 		margin-left: 0;
 		margin-top: 0;
-		border: 1px solid #dcdcdc;
+		border: 1px solid #ccc;
 		background-color: #fff;
 }
 .home-product-grid .product-grid.span3:nth-child(3n+3) {
@@ -298,7 +295,7 @@ p.woocommerce-result-count {
 		height: 49%;
 		margin-bottom: 2%;
 		background-color: #fafafa;
-		border: 1px solid #dcdcdc;
+		border: 1px solid #ccc;
 }
 .chuyen-trang-item:first-child {
 		/*border-top: none;*/
@@ -423,7 +420,7 @@ p.woocommerce-result-count {
 .slider .slide.product-slide .product-grid {
 	width: 100%;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-	border: 1px solid #dcdcdc;
+	border: 1px solid #ccc;
 }
 .slider .slide.product-slide .product-grid .img-wrapper {
 	width: 100%;
@@ -441,7 +438,7 @@ p.woocommerce-result-count {
 	box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
 }
 #rev_slider_1_1_wrapper > div {
-	border: 1px solid #dcdcdc;
+	border: 1px solid #ccc;
 }
 #rev_slider_1_1_wrapper > .tparrows	{
 	border: none;
@@ -461,7 +458,7 @@ ul.product_list_widget li {
 	width: 100%;
 	height: 100px;
 	background-color: #fff;
-	border: 1px solid #dcdcdc;
+	border: 1px solid #ccc;
 }
 ul.product_list_widget .widget-image a {
 	width: 100%;
@@ -634,7 +631,7 @@ ul.payment_methods li label {
 	border: 1px solid #ffa800;
 	background-color: #ffa800;
 	color: #fff !important;
-	font-size: 1.3em;
+	font-size: 1.2em;
 	font-weight: bold;
 	text-align: center;
 }
@@ -659,8 +656,232 @@ del span {
 .show-up {
 	color: #006fa6;
 }
+.home-product-grid .lastspan3 {
+	border: 1px solid #ccc;
+}
+.product-slider.columns6 .carousel .product-slide .lastspan3 {
+	margin-left: 0 !important;
+	border: 1px solid #ccc;
+}
 @media only screen and (max-width: 479px) {
 		.header-top-variant5, .header-top-variant5 .container {
 				height: 85px;
 		}
+}
+@media only screen and (max-width: 979px) {
+	.header-top .header-variant2 #main-nav .et-menu-title {
+		display: none;
+	}
+}
+@media (min-width: 768px) and (max-width: 979px) {
+	.header-variant2, .header-variant6 {
+		padding: 0;
+	}
+	#main-nav {
+		margin-top: 0;
+	}
+	.home-btn {
+		margin-top: 7px;
+	}
+	.et-menu-title {
+		line-height: 40px;
+		height: 40px;
+	}
+	.header-top-variant5 .header-variant2 > .span4 {
+		width: auto;
+	}
+	.span2.header-phone {
+		margin-top: 0;
+		height: 40px;
+		line-height: 40px;
+	}
+	.span2.header-phone a h4 {
+		display: none;
+	}
+	.row.header-variant2 .span6 #main-nav {
+		display: none;
+	}
+	.row.header-variant2 .span4 > div#top-cart {
+		padding: 0;
+	}
+	.row.header-variant2 .span4 > div#top-cart div {
+		margin: 0;
+	}
+	.row.header-variant2 .span4 > div#top-cart i {
+		margin-top: 5px;
+	}
+	.row.header-variant2 .span4 > div {
+		margin: 0;
+		height: 40px;
+		line-height: 40px;
+	}
+	.header-bg.header-type-variant5 {
+		padding-top: 0;
+	}
+	.container.header-area #main-nav .et-menu-title {
+		top: 40px;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid {
+		width: 230px;
+		margin-right: 10px;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid:nth-child(3n) {
+		margin-right: 10px;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid:nth-child(2n) {
+		margin-right: 0;
+	}
+	.product-grid .product-name-price {
+		text-align: left;
+	}
+}
+@media only screen and (max-width: 767px){
+	.home-btn {
+		margin-top: 10px;
+	}
+	.header-top.header-top-variant5 {
+		height: 50px;
+	}
+	.row.header-variant2 #main-nav .et-menu-title {
+		padding-top: 5px;
+		line-height: 40px;
+	}
+	.row.header-variant2 #main-nav {
+		margin-top: 0;
+	}
+	.row.header-variant2 .span6 {
+		width: 100px;
+	}
+	.row.header-variant2 .span4 {
+		width: 145px;
+	}
+	.row.header-variant2 .span4 .search_form {
+		float: right;
+	}
+	.span2.visible-phone {
+		margin-top: 5px;
+		width: auto;
+	}
+	.span2.visible-phone .textwidget a {
+		color: #fff;
+	}
+	.span2.visible-phone .textwidget a h4 {
+		margin-bottom: 0;
+	}
+}
+@media only screen and (max-width: 767px) and (min-width: 480px) {
+	.header-variant2 #top-cart a, .header-variant6 #top-cart a {
+		left: 0;
+	}
+	.header-variant2 #top-cart, .header-variant6 #top-cart {
+		margin-left: 0;
+	}
+	.header-top-variant5 .header-variant2 #searchform .field {
+		margin-top: 12px;
+	}
+	.header-top-variant5 .header-variant2 #searchform .field:focus {
+		margin-top: 13px;
+		margin-right: 0;
+		width: 140px !important;
+		height: 23px !important
+	}
+	.container .home-product-grid #products-grid {
+		padding-left: 0 !important;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid .img-wrapper {
+		width: auto;
+	}
+	.price > span {
+		font-size: 1.2em;
+	}
+	.shortcode-products .product-grid {
+		width: 206px !important;
+		height: 355px;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid:nth-child(3n) {
+		margin-right: 10px;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid:nth-child(2n) {
+		margin-right: 0 !important;
+	}
+	.product-grid .btn-cont {
+		margin-bottom: 0;
+	}
+	.product-grid .btn-cont a {
+		padding: 1px 8px 0;
+	}
+	.product-grid .product-name-price {
+		text-align: left;
+	}
+	.carousel {
+		height: 360px !important;
+	}
+	.carousel .product-grid {
+		width: auto !important;
+	}
+	.slide.product-slide {
+		margin-right: 0 !important;
+	}
+	.chuyen-trang-item {
+		margin-bottom: 15px;
+		height: 56%;
+	}
+	aside#text-10 {
+		margin-bottom: 60px;
+	}
+}
+@media only screen and (max-width: 479px) {
+	.header-top-variant5, .header-top-variant5 .container {
+		height: 50px;
+	}
+	.row.header-variant2 .span6 {
+		float: left;
+	}
+	.row.header-variant2 .span2.visible-phone {
+		display: none !important;
+	}
+	.row.header-variant2 .span4 {
+		float: left;
+		width: 180px;
+	}
+	.header-variant2 .search_form form, .header-variant6 .search_form form {
+		top: 4px;
+		right: 0;
+	}
+	.header-top-variant5 .header-variant2 #searchform .field:focus {
+		margin-right: -5px !important;
+		width: 190px !important;
+	}
+	.header-variant2 #top-cart, .header-variant6 #top-cart {
+		padding-left: 0;
+	}
+	.header-variant2 #top-cart a, .header-variant6 #top-cart a {
+		margin-top: 5px;
+	}
+	.home-product-grid .rows-count3.shortcode-products .product-grid {
+		margin-right: 0;
+		width: 280px !important;
+		height: 385px;
+	}
+	.product-grid .btn-cont {
+		margin-bottom: 0;
+	}
+	.product-grid .product-name-price {
+		text-align: left;
+	}
+	.product-slider .slider-title, .container .slider-title {
+		margin-bottom: 10px;
+	}
+	.product-slider .carousel {
+		margin-left: 0 !important;
+		width: 280px !important;
+		height: 360px !important;
+	}
+	.container_footer_bg .textwidget ul {
+		padding-left: 55px;
+		text-align: left;
+	}
+	.header-top .header-variant2 #main-nav .et-menu-title {
+		display: none;
+	}
 }
