--- a/custom.css
+++ b/custom.css
@@ -26,13 +26,13 @@
 
 /* Slider */
 #rev_slider_1_1_wrapper {
-	padding-right: 15px !important;
+	/*padding-right: 15px !important;*/
 }
 #rev_slider_1_1_wrapper #rev_slider_1_1 {
 	border: 1px solid #ccc;
 }
 #rev_slider_1_1_wrapper > div:last-child {
-	right: 15px !important;
+	/*right: 15px !important;*/
 }
 .home-product-grid.slider {
 	position: relative;
@@ -66,7 +66,7 @@
 
 .chuyen-trang-item {
 	width: 100%;
-	margin-bottom: 10px;;
+	margin-bottom: 18px;;
 	background-color: #fff;
 	border: 1px solid #ccc;
 }
@@ -147,7 +147,7 @@ aside.widget ins {
 .grid_pagination_block .product:hover img {
 	-webkit-transform: scale(1.1);
 		 -moz-transform: scale(1.1);
-		  -ms-transform: scale(1.1);
+			-ms-transform: scale(1.1);
 			 -o-transform: scale(1.1);
 					transform: scale(1.1);
 }
@@ -196,70 +196,70 @@ aside.widget ins {
 	float: right;
 }
 .show-up {
-  color: #006fa6;
+	color: #006fa6;
 }
 
 /* PRODUCT-DETAILS PAGE */
 .product_image a.lightbox-btn {
-  position: absolute;
+	position: absolute;
 	top: 10px;
-  left: 0;
-  z-index: 9999;
-  width: 20px;
-  height: 20px;
-  border: 1px solid #efefef;
-  background: #fafafa url(images/enlerge1-4.png) no-repeat center center;
-  opacity: 0.5;
+	left: 0;
+	z-index: 9999;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #efefef;
+	background: #fafafa url(images/enlerge1-4.png) no-repeat center center;
+	opacity: 0.5;
 }
 .views-gallery {
-  position: relative;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  width: 100%;
-  /*height: 102px;*/
-  margin: auto 0 15px;
+	position: relative;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	width: 100%;
+	/*height: 102px;*/
+	margin: auto 0 15px;
 }
 .views-gallery .slider {
 	padding-left: 0;
 	list-style: none;
 }
 .product_image .views-gallery .slide {
-  float: left;
-  text-align: center;
-  margin-right: 4px;
+	float: left;
+	text-align: center;
+	margin-right: 4px;
 }
 .product_image .views-gallery .slide img {
 	width: 60px;
 }
 .more-views-arrow.prev.disabled {
-  background-image: url(images/product-big-arrow-sprite.png);
-  background-repeat: no-repeat;
-  background-position: -7px -7px;
-  background-color: transparent !important;
+	background-image: url(images/product-big-arrow-sprite.png);
+	background-repeat: no-repeat;
+	background-position: -7px -7px;
+	background-color: transparent !important;
 }
 .next.disabled, .prev.disabled {
-  cursor: default!important;
+	cursor: default!important;
 }
 .more-views-arrow.prev,
 .more-views-arrow.next {
-  position: absolute;
-  z-index: 1;
-  bottom: -2px;
-  height: 105px;
-  width: 23px;
+	position: absolute;
+	z-index: 1;
+	bottom: -2px;
+	height: 105px;
+	width: 23px;
 }
 .more-views-arrow.prev {
-  left: 0;
-  background-image: url(images/product-big-arrow-sprite.png);
-  background-repeat: no-repeat;
-  background-position: -7px -127px;
+	left: 0;
+	background-image: url(images/product-big-arrow-sprite.png);
+	background-repeat: no-repeat;
+	background-position: -7px -127px;
 }
 .more-views-arrow.next {
-  right: 0;
-  background-image: url(images/product-big-arrow-sprite.png);
-  background-repeat: no-repeat;
-  background-position: -49px -127px;
+	right: 0;
+	background-image: url(images/product-big-arrow-sprite.png);
+	background-repeat: no-repeat;
+	background-position: -49px -127px;
 }
 .more-views-arrow.prev:hover,
 .more-views-arrow.next:hover {
@@ -272,12 +272,61 @@ aside.widget ins {
 	display: inline-block;
 }
 
+.navbar-collapse .nav .menu-item a {
+	padding-left: 15px !important;
+}
+
+.breadcrumbs {
+	font-size: 1.3em;
+}
+
+.regulation-side-bar {
+	margin-top: 10px;
+	list-style: none;
+	font-size: 1.2em;
+	line-height: 1.7em;
+}
+.regulation-side-bar li a:before {
+	margin-right: 5px;
+	margin-top: -2px;
+	content: '';
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 4px 6px 4px 0;
+	border-color: transparent #567fe8 transparent transparent;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.page-item a.current,
+.page-item span.current {
+	color: #fff;
+	cursor: default;
+	background-color: #337ab7;
+	border-color: #337ab7;
+}
+
+/*	992 <= md < 1200px */
+@media only screen and (min-width: 992) and (max-width: 1199px) {
+	.home-product-grid .product-last-md .product {
+		position: relative;
+		margin-right: 0;
+	}
+}
+
+/*	768 <= sm < 992px	*/
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.navbar-header {
 		display: none;
 	}
+	.home-product-grid .product-last-sm .product {
+		position: relative;
+		margin-right: 0;
+	}
 }
 
+/*				 xs < 768px	*/
 @media only screen and (max-width: 767px) {
 	.xs-no-padding {
 		padding: 0 !important;
@@ -325,5 +374,11 @@ aside.widget ins {
 	.price > span {
 		top: 5px;
 		right: 5px;
+	}
+	.chuyen-trang {
+		margin-top: 10px;
+	}
+	.regulation-side-bar {
+		padding-left: 0;
 	}
 }
