--- a/style.css
+++ b/style.css
@@ -1,78 +1,78 @@
 #loader {
-  position: absolute;
-  z-index: 100000;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 50px;
-  line-height: 50px;
-  background-color: #fff;
+	position: absolute;
+	z-index: 100000;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	line-height: 50px;
+	background-color: #fff;
 }
 .static-header-area {
-  margin-bottom: 0;
-  background-color: #008ACF;
+	margin-bottom: 0;
+	background-color: #008ACF;
 }
 .static-header-area a {
-  color: #fff !important;
-  text-transform: uppercase;
+	color: #fff !important;
+	text-transform: uppercase;
 }
 .static-header-area .navbar-left li:first-child a {
-  padding-left: 0;
+	padding-left: 0;
 }
 .static-header-area .navbar-left li a,
 .static-header-area .navbar-right li a {
-  padding-top: 12px;
+	padding-top: 12px;
 }
 .static-header-area .navbar-left .textwidget {
-  margin-top: 5px;
-  font-size: 1em;
+	margin-top: 5px;
+	font-size: 1em;
 }
 .fixed-header-area {
-  -moz-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
-  -webkit-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
-  box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
-  text-transform: uppercase;
+	-moz-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
+	-webkit-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
+	box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.3);
+	text-transform: uppercase;
 }
 .fixed-header-area .nav.navbar-nav li a {
-  padding-left: 5px;
-  padding-right: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 .fixed-header-area .navbar-header .navbar-brand {
-  padding: 5px 15px;
+	padding: 5px 15px;
 }
 .nav.navbar-nav li:has(a i) {
-  margin-top: -5px;
+	margin-top: -5px;
 }
 #searchform .field {
-  margin-top: 5px;
-  margin-bottom: 0;
-  padding: 2px 5px 4px 5px;
-  padding-left: 20px;
-  height: 24px;
-  width: 0;
-  color: #444;
-  cursor: pointer;
-  border:1px solid transparent !important;
-  background-color: transparent;
-  background-image: url(images/search_button_white_bg.png);
-  background-position: 98% 59%;
-  background-repeat: no-repeat;
-  -webkit-transition: all 0.4s ease 0s;
-  -moz-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
+	margin-top: 5px;
+	margin-bottom: 0;
+	padding: 2px 5px 4px 5px;
+	padding-left: 20px;
+	height: 24px;
+	width: 0;
+	color: #444;
+	cursor: pointer;
+	border:1px solid transparent !important;
+	background-color: transparent;
+	background-image: url(images/search_button_white_bg.png);
+	background-position: 98% 59%;
+	background-repeat: no-repeat;
+	-webkit-transition: all 0.4s ease 0s;
+	-moz-transition: all 0.4s ease 0s;
+	-o-transition: all 0.4s ease 0s;
+	transition: all 0.4s ease 0s;
 }
 #searchform .field:focus {
-  margin-top: 5px;
-  padding-left: 6px;
-  width: 200px;
-  cursor: text;
-  border: 1px solid transparent !important;
-  background-image: url(images/search_button_bg.png);
-  background-color: #FFF;
+	margin-top: 5px;
+	padding-left: 6px;
+	width: 200px;
+	cursor: text;
+	border: 1px solid transparent !important;
+	background-image: url(images/search_button_bg.png);
+	background-color: #FFF;
 }
 #searchform input[type="submit"] {
-  display: none;
+	display: none;
 }
 .fixed-header-area {
 	border-bottom:1px solid #ccc;
@@ -84,92 +84,92 @@
 					transition: all 0.2s ease-in-out;
 }
 .fixed-header-area.fixed-already {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index:10000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index:10000;
 }
 
 /* Scroll bar - on the right */
 .nicescroll-rails {
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  height: 100%;
-  width: 7px !important;
-  cursor: default;
-  opacity: 1;
-  background: #efefef;
-  z-index: 101!important;
+	position: fixed;
+	top: 0px;
+	right: 0px;
+	height: 100%;
+	width: 7px !important;
+	cursor: default;
+	opacity: 1;
+	background: #efefef;
+	z-index: 101!important;
 }
 .nicescroll-rails div {
-  position: relative;
-  float: right;
-  top: 163px;
-  right: 0;
-  width: 7px !important;
-  height: 55px;
-  border: 1px solid rgb(255, 255, 255);
-  border-color: transparent !important;
-  background-color: #808080 !important;
-  background-clip: padding-box;
-  -webkit-border-radius: 0 !important;
-          border-radius: 0 !important;
+	position: relative;
+	float: right;
+	top: 163px;
+	right: 0;
+	width: 7px !important;
+	height: 55px;
+	border: 1px solid rgb(255, 255, 255);
+	border-color: transparent !important;
+	background-color: #808080 !important;
+	background-clip: padding-box;
+	-webkit-border-radius: 0 !important;
+					border-radius: 0 !important;
 }
 .footer_container {
-  padding-top: 20px;
-  padding-bottom: 15px;
-  color: #fff;
+	padding-top: 20px;
+	padding-bottom: 15px;
+	color: #fff;
 }
 .footer_title {
-  display: block;
-  padding-bottom: 15px;
-  width: 100%;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 400;
+	display: block;
+	padding-bottom: 15px;
+	width: 100%;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 400;
 }
 .textwidget ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  color: #fff;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	color: #fff;
 }
 .textwidget ul li:not(.social-link-wrapper):before {
-  margin-right: 5px;
-  margin-top: -2px;
-  content: '';
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 4px 0 4px 6px;
-  border-color: transparent transparent transparent #fff;
-  display: inline-block;
-  vertical-align: middle;
+	margin-right: 5px;
+	margin-top: -2px;
+	content: '';
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 4px 0 4px 6px;
+	border-color: transparent transparent transparent #fff;
+	display: inline-block;
+	vertical-align: middle;
 }
 .textwidget ul li a {
-  color: #fff !important;
+	color: #fff !important;
 }
 .social-link a {
-  margin-top: 5px;
+	margin-top: 5px;
 }
 .fc-webicon {
-  display: inline-block;
-  background-size: 100%;
-  width: 30px;
-  height: 30px;
-  font-size: 0;
-  text-align: left;
-  margin-bottom: 5px;
+	display: inline-block;
+	background-size: 100%;
+	width: 30px;
+	height: 30px;
+	font-size: 0;
+	text-align: left;
+	margin-bottom: 5px;
 }
 .fc-webicon.small {
-  margin-right: 5px;
-  width: 20px;
-  height: 20px;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+	margin-right: 5px;
+	width: 20px;
+	height: 20px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
 }
 
 
@@ -304,21 +304,32 @@
 	background: initial !important;
 }
 
+.codenegar-shop-loop-wrapper {
+	margin: 10px 0;
+}
+.woocommerce-result-count {
+	font-weight: 300;
+	font-size: 1.3em;;
+}
+.woocommerce-ordering {
+	margin: 0;
+}
+
 /* ICONS */
 [class^="icondetail-"], [class*="icondetail-"] {
-  background-image: url(./images/icons/icondetail@1x.png);
-  background-repeat: no-repeat;
-  display: inline-block;
-  height: 30px;
-  width: 30px;
-  line-height: 30px;
-  vertical-align: middle;
+	background-image: url(./images/icons/icondetail@1x.png);
+	background-repeat: no-repeat;
+	display: inline-block;
+	height: 30px;
+	width: 30px;
+	line-height: 30px;
+	vertical-align: middle;
 }
 .icondetail-map {
-  background-position: -135px 0;
-  width: 24px;
-  height: 24px;
-  margin: -5px auto 0px;
+	background-position: -135px 0;
+	width: 24px;
+	height: 24px;
+	margin: -5px auto 0px;
 }
 
 /* Facebook */
@@ -376,44 +387,44 @@
 .svg .fc-webicon.mail { background: url("images/icons/fc-webicon-mail.svg"); }
 
 @media only screen and (min-width: 1200px) {
-  .static-header-area .navbar-left li:first-child {
-    padding-right: 30px;
-  }
+	.static-header-area .navbar-left li:first-child {
+		padding-right: 30px;
+	}
 }
 @media only screen and (min-width: 768px) and (max-width: 1198px) {
-  .static-header-area .navbar-right {
-    position: relative;
-  }
-  .static-header-area .navbar-right li:first-child {
-    margin-right: 25px;
-  }
-  .static-header-area .navbar-right li:last-child {
-    position: absolute;
-    right: 0;
-  }
-  .fixed-header-area .nav li a {
-    font-size: 0.8em;
-  }
+	.static-header-area .navbar-right {
+		position: relative;
+	}
+	.static-header-area .navbar-right li:first-child {
+		margin-right: 25px;
+	}
+	.static-header-area .navbar-right li:last-child {
+		position: absolute;
+		right: 0;
+	}
+	.fixed-header-area .nav li a {
+		font-size: 0.8em;
+	}
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .static-header-area .nav li a {
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: 0.9em;
-  }
-  .fixed-header-area .nav li a {
-    font-size: 0.7em;
-  }
+	.static-header-area .nav li a {
+		padding-left: 5px;
+		padding-right: 5px;
+		font-size: 0.9em;
+	}
+	.fixed-header-area .nav li a {
+		font-size: 0.7em;
+	}
 }
 @media only screen and (max-width: 768px) {
-  .nicescroll-rails {
-    display: none;
-  }
-  .fixed-header-area {
-    margin-bottom: 0;
-  }
+	.nicescroll-rails {
+		display: none;
+	}
+	.fixed-header-area {
+		margin-bottom: 0;
+	}
 }
-/*         xs < 768px  */
-/*  768 <= sm < 992px  */
-/*  992 <= md < 1200px */
-/* 1200 <= lg          */
+/*				 xs < 768px	*/
+/*	768 <= sm < 992px	*/
+/*	992 <= md < 1200px */
+/* 1200 <= lg					*/
