Update Bootstrap3 for Checkout-page

--- a/custom.css
+++ b/custom.css
@@ -316,6 +316,67 @@ aside.widget ins {
 	color: #fff;
 }
 
+.woocommerce .woocommerce-pay,
+.woocommerce .woocommerce-billing-fields,
+.woocommerce .woocommerce-shipping-fields {
+	margin-bottom: 20px;
+	padding: 0 10px 5px;
+  background-color: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+#billing_first_name_field, #billing_last_name_field,
+#shipping_first_name_field, #shipping_last_name_field {
+  width: 50%;
+  float: left;
+}
+#billing_first_name_field, #shipping_first_name_field {
+	padding-right: 1%;
+}
+#billing_last_name_field, #shipping_last_name_field {
+	padding-left: 1%;
+}
+#billing_first_name_field input, #billing_last_name_field input,
+#shipping_first_name_field input, #shipping_last_name_field input {
+  width: 100% !important;
+}
+.required {
+  color: #008ACF;
+  margin-left: 3px;
+}
+
+.form-header {
+	margin: 0 -10px 10px;
+	padding: 5px 10px;
+	line-height: 25px;
+	font-size: 1.5em;
+}
+.form-header h4,
+.form-header input {
+	margin: 0;
+}
+.payment_methods.methods label {
+	font-size: 1.2em;
+}
+.payment_box {
+	margin-left: 15px;
+  padding-left: 10px;
+  border-left: 3px solid #dcdcdc;
+	text-indent: 10px;
+}
+.payment_box p {
+	font-style: italic;
+	color: #999;
+}
+
+.woocommerce-terms {
+	padding: 1px 5px;
+	text-indent: 25px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+.btn-submit-order {
+	margin-bottom: 20px;
+}
+
 /*	992 <= md < 1200px */
 @media only screen and (min-width: 992) and (max-width: 1199px) {
 	.home-product-grid .product-last-md .product {
